--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1.20.1", features = ["full"] }
-tokio-util = { version = "0.7.3", features = ["full"] }
+tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread"] }
 chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"]}
 deltalake = { version = "0.12.0", features = ["azure", "datafusion"] }
 object_store = "0.5.6"
